# saan-shield-gateway

./: .gitignore  README.md  questions.txt
code/nimbic/backend/: README.md  alembic.ini  pyproject.toml
code/nimbic/backend/app/: __init__.py  config.py  database.py  main.py  redis.py
code/nimbic/backend/app/db/: session.py
code/nimbic/backend/app/finops/: attribution_service.py  budget_service.py  forecast_service.py
code/nimbic/backend/app/middleware/: auth.py  rate_limit.py
code/nimbic/backend/app/models/: __init__.py  ab_test.py  api_key.py  base.py  finops.py  org.py  provider_config.py  request_log.py  routing_cache.py  security_policy.py  security_violation.py
code/nimbic/backend/app/routers/: cache.py  finops.py  health.py  keys.py  logs.py  orgs.py  providers.py  proxy.py  routing.py  security.py
code/nimbic/backend/app/routing/: ab_stats.py  ab_test.py  prompt_classifier.py  semantic_cache.py  smart_router.py
code/nimbic/backend/app/schemas/: __init__.py  api_key.py  finops.py  log.py  org.py  provider.py  routing.py  security.py
code/nimbic/backend/migrations/: env.py
code/nimbic/backend/routers/: cache.py  routing.py  security.py
code/nimbic/backend/routing/: ab_test.py  prompt_classifier.py  semantic_cache.py  smart_router.py
code/nimbic/backend/schemas/: routing.py  security.py
code/nimbic/backend/scratch/: check_violations.py
code/nimbic/backend/security/: policy_engine.py  residency_enforcer.py
code/nimbic/backend/services/: proxy_service.py
code/nimbic/backend/tests/: __init__.py  conftest.py  test_ab_testing.py  test_additional_detectors.py  test_budget_forecast.py  test_finops.py  test_gateway.py  test_main.py  test_management.py  test_pii_detector.py  test_policy_engine.py  test_proxy.py  test_routing.py  test_routing_cache.py  test_routing_cache_management.py  test_security.py
code/nimbic/sdk/python/: README.md  pyproject.toml
(+41 files in other folders)
