[project]
name = "saan-ai-gateway-backend"
version = "0.1.0"
description = "FastAPI backend app for saan-ai-gateway (SaaN Shield)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.3", # Modern Redis-py contains full async support (formerly aioredis)
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "bcrypt>=4.1.2",
    "cryptography>=42.0.5",
    "presidio-analyzer==2.2.354",
    "presidio-anonymizer==2.2.354",
    "spacy==3.7.4",
    "transformers==4.40.0",
    "torch==2.3.0",
    "geoip2==4.8.0",
    "maxminddb==2.6.1",
    "httpx-cache",
    "sentence-transformers==3.0.1",
    "pgvector==0.3.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "tiktoken==0.7.0",
    "anthropic==0.28.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
