[project]
name = "saan-shield"
version = "0.1.0"
description = "Official Python SDK for SaaN Shield Gateway"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["saan_shield"]

